# aiogram_webwatcher_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 89e64d676151_init_tables_users_websites.py  db84b00fc37f_add_relationship_user_website.py
app/: bot.py  config.py
app/db/: database.py  models.py
app/handlers/: __init__.py  handlers.py  states.py
app/middlewares/: db_session_middleware.py
app/services/: commands.py  dao.py  keyboards.py  scheduler.py  scraper.py  validation.py
tests/: conftest.py  test_dao.py  test_handlers.py  test_keyboards.py  test_scheduler.py  test_validation.py
